snaplogger (1.0.19.0~bionic) bionic; urgency=high

  * Fixed the "info" description in severity.ini

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 23 Oct 2020 21:26:55 -0700

snaplogger (1.0.18.0~bionic) bionic; urgency=high

  * Added support for adding clearly named fields in your errors.
  * Added support for a corresponding `${field:name=<name>}`.
  * Updated a test to verify the field feature works.
  * Fixed the add_alias() so it works even after the severity is registered.
  * Fixed the descriptions vs alias in the severity.ini file.
  * Updated the tests so they all pass as expected.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 22 Oct 2020 13:25:50 -0700

snaplogger (1.0.17.0~bionic) bionic; urgency=high

  * Removed support for the asynchronous=true|false in config files.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 11 Oct 2020 22:35:00 -0700

snaplogger (1.0.16.0~bionic) bionic; urgency=high

  * Allow for the console to be defined multiple times. The second and
    further attempts to add it will succeed although it won't be added again.
    This allow for early errors to safely generate a console add.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 09 Oct 2020 22:24:06 -0700

snaplogger (1.0.15.0~bionic) bionic; urgency=high

  * Applied fix to ignore the ""_sev operator on older compilers.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 30 Sep 2020 23:34:12 -0700

snaplogger (1.0.14.0~bionic) bionic; urgency=high

  * Added support to count the number of messages logged per severity.
  * Updated the `mk` script to use `nproc` instead of just 4.
  * Verify that severity levels used when creating a severity object are
    between MIN and MAX.
  * Made the severity_by_severity_t and severity_by_name_t types public.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 29 Sep 2020 18:12:32 -0700

snaplogger (1.0.13.0~bionic) bionic; urgency=high

  * Fixed the help message of --console.
  * Added a --trace command line option.
