@@ -1,6 +1,9 @@
 snaplogger (1.0.19.0~bionic) bionic; urgency=high
 
   * Fixed the "info" description in severity.ini
+  * Renamed the field_t map as field_map_t in the message declaration.
+  * Added a "fields" variable, but that doesn't help at the moment.
+  * Added a (weak) test for the "fields" variable.
 
  -- Alexis Wilke <alexis@m2osw.com>  Fri, 23 Oct 2020 21:26:55 -0700
 
